Deployment_Project/force-app/main/default/objects/Bike__c/fields/Average__c.field-meta.xml
<CustomField>
    <fullName>Average__c</fullName>
    <description>Stores the average of the bike</description>
    <label>Average</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>