Deployment_Project/force-app/main/default/objects/Bike__c/fields/Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Efficiency__c</fullName>
    <description>Indicates that how efficient the bike is in performance.</description>
    <formula>IF( Average__c &lt; 50, 0.90, 0.75)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Efficiency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>