Deployment_Project/force-app/main/default/objects/Bike__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Mountain Bike</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Bomber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>